initial algorithm cleanups